--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,29 @@
-== README
+Simple Blog
+==
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+A simple blog app entirely written in react & rails as practice.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+# Demo
+
+https://protected-beach-50101.herokuapp.com/
+
+
+# Screenshot
+
+![](http://i.imgur.com/Aaf8Mik.png)
+
+
+# Related packages
+
+* [react](https://github.com/facebook/react)
+* [react-router](https://github.com/reactjs/react-router)
+* [react_on_rails](https://github.com/shakacode/react_on_rails/)
+* [react-paginate](https://github.com/AdeleD/react-paginate)
+* [devise](https://github.com/plataformatec/devise)
+* [will_paginate](https://github.com/mislav/will_paginate)
+* [activeadmin](https://github.com/activeadmin/activeadmin)
+* [omniauth](https://github.com/intridea/omniauth)
+* [omniauth-google-oauth2](https://github.com/zquestz/omniauth-google-oauth2)
+* [bootstrap](https://github.com/twbs/bootstrap-sass)
+
